Fix error in template

--- a/templates/default/ifcfg-interface.erb
+++ b/templates/default/ifcfg-interface.erb
@@ -2,5 +2,7 @@
 # Manual changes will be lost.
 
 <% @interfaces.each do |interface, attributes| %>
-<% attributes.each do |directive, value| %>
+    <% attributes.each do |directive, value| %>
 <%= directive.upcase %>=<%= value %>
+    <% end %>
+<% end %>
