--- a/templates/default/ifcfg-interface.erb
+++ b/templates/default/ifcfg-interface.erb
@@ -1,8 +1,6 @@
 # This file is managed by the ipaddress cookbook with Chef.
 # Manual changes will be lost.
 
-<% @interfaces.each do |interface, attributes| %>
-    <% attributes.each do |directive, value| %>
+<% @interfaces.each do |directive, value| %>
 <%= directive.upcase %>=<%= value %>
-    <% end %>
 <% end %>
